undo horizontal scroll fix

--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,5 @@
 @import "tailwindcss";
 
-body {
-  overflow-x: clip;
-}
-
 @theme {
   --text-sm: 0.9375rem;
   --text-xs: 0.8125rem;
